[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pomotimer"
version = "0.1.0"
description = "A CLI Pomodoro timer"
authors = [
    { name="Deniz Daglar", email="denizekindaglar@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.setuptools]
package-dir = {""="src"}

[tool.setuptools.packages.find]
where = ["src"]



[project.scripts]
pomotimer = "pomotimer.main:main"